--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,6 @@ include_directories(${COMMON_INCLUDES})
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 
-<<<<<<< HEAD
 #set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/dean.cpp
             #  ${PROJECT_SOURCE_DIR}/src/student.cpp
          #     ${PROJECT_SOURCE_DIR}/src/group.cpp)
@@ -33,8 +32,8 @@ set(CMAKE_CXX_STANDARD 11)
 #add_library(task1_lib ${SRC_FILES1} include/Student.h)
 #add_library(task1_lib ${SRC_FILES1} include/Group.h)
 #add_library(task1_lib ${SRC_FILES1} include/Deanery.h)
-add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main.cpp )
->>>>>>> 7f782072dd8eab8802d7102fb6ae2d0ecc7aeeda
+#add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main.cpp )
+#>>>>>>> 7f782072dd8eab8802d7102fb6ae2d0ecc7aeeda
 
 #add_library(task1_lib ${SRC_FILES})
 add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main.cpp)
