--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/personal.cpp
               ${PROJECT_SOURCE_DIR}/src/engineer.cpp
-              ${PROJECT_SOURCE_DIR}/src/manager.cpp)
+              ${PROJECT_SOURCE_DIR}/src/manager.cpp
+			  # ${PROJECT_SOURCE_DIR}/src/base.cpp
+			  )
 
 set(CMAKE_CXX_STANDARD 11)
 
