--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ script:
   ############################################################################
   - mkdir -p build
   - cd build
-  - cmake ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DCMAKE_BUILD_TYPE=Coverage -DBUILD_TESTS=OFF
+  - cmake ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DCMAKE_BUILD_TYPE=Coverage -DBUILD_TESTS=OFF..
   - make
 #  - make task1_coverage
 #  - ctest
