--- a/.travis.yml
+++ b/.travis.yml
@@ -59,10 +59,10 @@ script:
   ############################################################################
   # Build main and tests
   ############################################################################
-  - mkdir -p build
-  - cd build
-  - cmake ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DCMAKE_BUILD_TYPE=Coverage -DBUILD_TESTS=OFF..
-  - make
+  #- mkdir -p build
+  #- cd build
+  #- cmake ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DCMAKE_BUILD_TYPE=Coverage -DBUILD_TESTS=OFF..
+  #- make
 #  - make task1_coverage
 #  - ctest
 
