--- a/.travis.yml
+++ b/.travis.yml
@@ -59,12 +59,12 @@ script:
   ############################################################################
   # Build main and tests
   ############################################################################
-  #- mkdir -p build
-  #- cd build
+  - mkdir -p build
+  - cd build
   #- cmake ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DCMAKE_BUILD_TYPE=Coverage -DBUILD_TESTS=OFF..
-  #- make
-#  - make task1_coverage
-#  - ctest
+  - make
+  - make task1_coverage
+  - ctest
 
 after_success:
   - codecov -t c376990f-2ad6-4f7b-bbdb-5378a52e295c -X gcov
