--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,16 +18,27 @@ include_directories(${COMMON_INCLUDES})
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 
-set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/dean.cpp
-              ${PROJECT_SOURCE_DIR}/src/student.cpp
-              ${PROJECT_SOURCE_DIR}/src/group.cpp)
+#set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/dean.cpp
+            #  ${PROJECT_SOURCE_DIR}/src/student.cpp
+         #     ${PROJECT_SOURCE_DIR}/src/group.cpp)
 
+#set(CMAKE_CXX_STANDARD 11)
+#=======
+#set(SRC_FILES1 ${PROJECT_SOURCE_DIR}/src/Student.cpp
+       #        ${PROJECT_SOURCE_DIR}/src/Group.cpp
+        #       ${PROJECT_SOURCE_DIR}/src/Deanery.cpp)
 set(CMAKE_CXX_STANDARD 11)
+#add_library(task1_lib ${SRC_FILES1})
+#add_library(task1_lib ${SRC_FILES1} include/Student.h)
+#add_library(task1_lib ${SRC_FILES1} include/Group.h)
+#add_library(task1_lib ${SRC_FILES1} include/Deanery.h)
+#add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main.cpp )
+#>>>>>>> 7f782072dd8eab8802d7102fb6ae2d0ecc7aeeda
 
-add_library(task1_lib ${SRC_FILES})
+#add_library(task1_lib ${SRC_FILES})
 add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
-target_link_libraries(task1 task1_lib)
+target_link_libraries(task1)
 
 ################################
 # Testing
@@ -55,7 +66,8 @@ if (BUILD_TESTS)
   target_link_libraries(runUnitTests gtest gtest_main)
 
   # Extra linking for the project.
-  target_link_libraries(runUnitTests task1_lib)
+  target_link_libraries(runUnitTests)
+  #target_link_libraries(runUnitTests task1_lib)
 
   # This is so you can do 'make test' to see all your tests run, instead of
   # manually running the executable runUnitTests to see those specific tests.
