--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,19 @@ include_directories(${COMMON_INCLUDES})
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 
-set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/Employee.cpp
-              ${PROJECT_SOURCE_DIR}/src/Personal.cpp
-              ${PROJECT_SOURCE_DIR}/src/Cleaner.cpp
-              ${PROJECT_SOURCE_DIR}/src/Driver.cpp)
+set(SRC_FILES
+  ${PROJECT_SOURCE_DIR}/src/Employee.cpp
+  ${PROJECT_SOURCE_DIR}/src/Personal.cpp
+  ${PROJECT_SOURCE_DIR}/src/Cleaner.cpp
+  ${PROJECT_SOURCE_DIR}/src/Driver.cpp
+  ${PROJECT_SOURCE_DIR}/src/Engineer.cpp
+  ${PROJECT_SOURCE_DIR}/src/Project.cpp
+  ${PROJECT_SOURCE_DIR}/src/Programmer.cpp
+  ${PROJECT_SOURCE_DIR}/src/Tester.cpp
+  ${PROJECT_SOURCE_DIR}/src/Manager.cpp
+  ${PROJECT_SOURCE_DIR}/src/ProjectManager.cpp
+  ${PROJECT_SOURCE_DIR}/src/TeamLeader.cpp
+  ${PROJECT_SOURCE_DIR}/src/SeniorManager.cpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
