--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 
 #set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/personal.cpp
-            ${PROJECT_SOURCE_DIR}/src/engineer.cpp
-                ${PROJECT_SOURCE_DIR}/src/manager.cpp)
+#            ${PROJECT_SOURCE_DIR}/src/engineer.cpp
+#               ${PROJECT_SOURCE_DIR}/src/manager.cpp)
 
 #set(CMAKE_CXX_STANDARD 11)
 
